# axiograph

./: .dockerignore  .envrc  .envrc.local.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml  docker.yml  release.yml
deploy/k8s/: axiograph-db-headless.yaml  axiograph-db-service.yaml  axiograph-db-statefulset.yaml  (+1 more)
docs/: README.md
examples/: Family.axi  run_demo.sh
lean/: Axiograph.lean  _Tmp.lean  lake-manifest.json  lakefile.lean
models/: world_model_small.onnx
rust/: Cargo.toml  Makefile
rust/crates/axiograph-cli/: Cargo.toml
rust/crates/axiograph-cli/src/: accepted_plane.rs  analyze.rs  axi_fmt.rs  axql.rs  competency_questions.rs  db_server.rs  doc_chunks.rs  embeddings.rs  github.rs  llm.rs  main.rs  nlq.rs  pathdb_wal.rs  perf.rs  profiling.rs  proposal_gen.rs  proposals_import.rs  proposals_validate.rs  proto.rs  quality.rs  query_ir.rs  relation_resolution.rs  repl.rs  schema_discovery.rs  sqlish.rs  store_sync.rs  synthetic_pathdb.rs  viz.rs  web.rs  world_model.rs  world_model_input.rs
rust/crates/axiograph-cli/templates/: viz_explorer.html
rust/crates/axiograph-cli/tests/: db_server_e2e.rs  examples_e2e.rs  github_import_e2e.rs
rust/crates/axiograph-dsl/: Cargo.toml
rust/crates/axiograph-dsl/src/: axi_v1.rs  digest.rs  lib.rs  schema_v1.rs
rust/crates/axiograph-dsl/tests/: constraint_parse_format_tests.rs  constraint_property_tests.rs
rust/crates/axiograph-ingest-docs/: Cargo.toml
rust/crates/axiograph-ingest-docs/src/: augment.rs  confluence.rs  conversations.rs  discovery_trace.rs  evidence.rs  fact_extraction.rs  lib.rs  pdf.rs  promotion.rs  proposals.rs  readings.rs  repo.rs
rust/crates/axiograph-ingest-docs/tests/: promotion_tests.rs  proposals.rs  repo_index_and_discovery.rs
rust/crates/axiograph-ingest-iges/: Cargo.toml
rust/crates/axiograph-ingest-iges/src/: lib.rs
rust/crates/axiograph-ingest-json/: Cargo.toml
rust/crates/axiograph-ingest-json/src/: lib.rs
rust/crates/axiograph-ingest-proto/: Cargo.toml
rust/crates/axiograph-ingest-proto/src/: lib.rs
rust/crates/axiograph-ingest-rdfowl/: Cargo.toml
rust/crates/axiograph-ingest-rdfowl/src/: lib.rs  owl.rs
rust/crates/axiograph-ingest-sql/: Cargo.toml
rust/crates/axiograph-ingest-sql/src/: lib.rs
rust/crates/axiograph-ingest-step/: Cargo.toml
rust/crates/axiograph-ingest-step/src/: lib.rs  parser.rs
rust/crates/axiograph-llm-sync/: Cargo.toml
rust/crates/axiograph-llm-sync/src/: extraction.rs  grounding.rs  lib.rs  path_optimized.rs  path_verification.rs  protocol.rs  providers.rs  reconciliation.rs  reconciliation_format.rs  sync.rs
rust/crates/axiograph-llm-sync/src/format/: mod.rs
rust/crates/axiograph-llm-sync/src/llm/: mod.rs  providers.rs
rust/crates/axiograph-llm-sync/src/probabilistic/: mod.rs
rust/crates/axiograph-llm-sync/tests/: e2e_tests.rs  path_verification_tests.rs  pathdb_snapshot_export_tests.rs  property_tests.rs  reconciliation_format_tests.rs  reconciliation_tests.rs
rust/crates/axiograph-pathdb/: Cargo.toml
rust/crates/axiograph-pathdb/examples/: emit_delta_f_cert_v1.rs  emit_normalize_path_cert_v2.rs  emit_ontology_rewrite_derivation_cert_v3.rs  emit_path_equiv_cert_v2.rs  emit_path_equiv_congr_cert_v2.rs  emit_pathdb_export_axi_v1.rs  emit_reachability_cert.rs  emit_reachability_cert_v2.rs  emit_reachability_cert_v2_anchored.rs  emit_resolution_cert_v2.rs  emit_rewrite_derivation_cert_v2.rs  emit_rewrite_derivation_cert_v3.rs
rust/crates/axiograph-pathdb/src/: axi_export.rs  axi_meta.rs  axi_module_constraints.rs  axi_module_export.rs  axi_module_import.rs  axi_module_typecheck.rs  axi_semantics.rs  axi_type.rs  axi_typed.rs  branding.rs  certificate.rs  checked_db.rs  fact_index.rs  guardrails.rs  index_sidecar.rs  learning.rs  lib.rs  migration.rs  modal.rs  optimizer.rs  proof_mode.rs  text_index.rs  typestate.rs  verified.rs  witness.rs
rust/crates/axiograph-pathdb/tests/: axi_constraints_ok_property_tests.rs  axi_constraints_ok_unit_tests.rs  axi_export_property_tests.rs  axi_export_tests.rs  axi_module_typecheck_tests.rs  axi_semantics_tests.rs  axi_typed_tests.rs  fact_index_property_tests.rs  fact_index_tests.rs  fixed_prob_property_tests.rs  follow_path_property_tests.rs  index_sidecar_tests.rs  learning_graph_tests.rs  meta_plane_constraints_param_tests.rs  path_expr_property_tests.rs  path_index_tests.rs  pathdb_tests.rs  reachability_property_tests.rs  semantics_tests.rs  typed_builder_property_tests.rs
rust/crates/axiograph-storage/: Cargo.toml
rust/crates/axiograph-storage/src/: lib.rs  persistence.rs  tests.rs
rust/examples/: e2e_demo.rs  machining_e2e.rs
rust/scripts/: run_e2e_tests.sh
rust/src/: lib.rs
rust/tests/: integration_tests.rs
rust/verus/: Cargo.toml
rust/verus/src/: lib.rs
scripts/: approximate_tacit_query_demo.sh  axiograph_llm_plugin_mock.py  axiograph_world_model_plugin_baseline.py  axiograph_world_model_plugin_onnx.py  axiograph_world_model_plugin_real.py  axiograph_world_model_plugin_transformer_stub.py  build_world_model_onnx.py  cli_command_usage_demo.sh  context_drift_demo.sh  continuous_ingest_proto_cli_demo.sh  continuous_ingest_sql_cli_demo.sh  db_server_api_demo.sh  db_server_distributed_demo.sh  db_server_live_viz_demo.sh  db_server_llm_viz_demo.sh  discovery_loop_demo.sh  e2e_test.sh  fetch_public_rdfowl_datasets.sh  fibered_closure_constraints_demo.sh  graph_explorer_deep_knowledge_demo.sh  graph_explorer_full_demo.sh  install-hooks.sh  llm_ollama_nemotron_demo.sh  modalities_axi_demo.sh  network_quality_demo.sh  ontology_engineering_all_sources_offline_demo.sh  ontology_engineering_ollama_discovery_demo.sh  ontology_engineering_proto_evolution_ollama_demo.sh  ontology_rewrites_axi_demo.sh  perf_axql.sh  perf_index_caches.sh  perf_large_proto_api_axpd.sh  perf_pathdb.sh  physics_discovery_deterministic_demo.sh  physics_discovery_ollama_grounded_demo.sh  pre-commit.sh  profile_pathdb_wal_build.sh  proto_business_server_llm_viz_demo.sh  proto_business_viz_demo.sh  rdf_named_graph_context_demo.sh  (+20 more)
(+211 files in other folders)
