[package]
name = "axiograph-verus"
version = "0.1.0"
edition = "2021"
description = "Verus-verified components for Axiograph"

[dependencies]
# Verus is used as a verification tool, not a runtime dependency
# To verify: verus --crate-type lib src/lib.rs

[features]
default = []
verus = [] # Enable when running under Verus verifier

[lib]
path = "src/lib.rs"

