[package]
name = "axiograph-ingest-docs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Document/PDF/book ingestion for Axiograph knowledge graphs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
regex.workspace = true
thiserror.workspace = true

# PDF extraction (optional)
pdf-extract = { workspace = true, optional = true }

[features]
default = []
pdf = ["pdf-extract"]

[dev-dependencies]
axiograph-dsl = { path = "../axiograph-dsl" }
