[package]
name = "axiograph-ingest-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ingestion for Protobuf/gRPC APIs via buf descriptor sets"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

axiograph-ingest-docs = { path = "../axiograph-ingest-docs" }

