[package]
name = "axiograph-llm-sync"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Bidirectional LLM-Knowledge Graph synchronization"

[dependencies]
axiograph-dsl = { path = "../axiograph-dsl" }
axiograph-pathdb = { path = "../axiograph-pathdb" }
axiograph-storage = { path = "../axiograph-storage" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
regex = "1"
tracing.workspace = true
parking_lot = "0.12"
byteorder = "1.5"
tempfile = "3"
ciborium.workspace = true
bincode.workspace = true
roaring.workspace = true
reqwest = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
approx.workspace = true

[features]
default = []
openai = ["reqwest"]
anthropic = ["reqwest"]
local = ["reqwest"]
full = ["openai", "anthropic", "local"]

