[package]
name = "axiograph-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified storage layer for Axiograph: .axi + PathDB + sync"

[dependencies]
axiograph-dsl = { path = "../axiograph-dsl" }
axiograph-pathdb = { path = "../axiograph-pathdb" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
tokio = { version = "1", features = ["full", "fs"] }
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
notify = "6"  # File system watching
parking_lot.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

[features]
default = []
watch = []  # Enable file watching for hot reload
